--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <body>
    <h1>Hello Classmates!</h1> 
    <h2>My name is Melanie Huang!</h2>
-   <p>short paragraph</p>
+   <p>I am currently a senior at SITHS and would like to pursue somehthing in the medical field so I'm not sure why I'm in this class. 
+    But either way, I hope to be able to catch up to everyone else as they look like they've been coding their whole lives. I enjoy 
+    playing handball, video games and binging netflix shows! </p>
+   <a href=https://images.app.goo.gl/Fy28AABU6rCaTE2i7>Click For Cute Doggo</a>
+   <ol>
+    <li>a</li>
+    <li>b</li>
+    <li>c</li></ol>
+    <ul>
+    <li>a</li>
+    <li>b</li>
+    <li>c</li></ul>
 </body>
 </html>
