--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
 </head>
 <body>
    <h1>Hello Classmates!</h1> 
-   <h2>My name is Melanie Huang!</h2>
-   <p>I am currently a senior at SITHS and would like to pursue somehthing in the medical field so I'm not sure why I'm in this class. 
-    But either way, I hope to be able to catch up to everyone else as they look like they've been coding their whole lives. I enjoy 
+   <h2>My name is Melanie Huang</h2>
+   <p>I am currently a senior at SITHS and would like to pursue something in the medical field so I'm not sure why I'm in this class. 
+    But either way, I'm determined to catch up to everyone else as they look like they've been coding their whole lives. I enjoy 
     playing handball, video games and binging netflix shows! </p>
-   <a href=https://images.app.goo.gl/Fy28AABU6rCaTE2i7>Click For Cute Doggo</a>
-   <ol>
-    <li>a</li>
-    <li>b</li>
-    <li>c</li></ol>
+    <a href=https://images.app.goo.gl/Fy28AABU6rCaTE2i7>I also really love dogs!</a>
     <ul>
-    <li>a</li>
-    <li>b</li>
-    <li>c</li></ul>
+    <li>Favorite Color: Purple</li>
+    <li>Favorite Food: Sushi</li>
+    <li>Favorite Artist: Bruno Mars</li></ul>
+    <p>TOP 3 FAVORITE FRUITS!!</p>
+    <ol>
+    <li>Peaches</li>
+    <li>Strawberries</li>
+    <li>Lychees</li></ol>
+    <img src="Barry-Allen-wrong-answer-school-memes.jpg" alt="Barry Allen Meme">
 </body>
 </html>
